--- a/index.html
+++ b/index.html
@@ -47,14 +47,12 @@
             <h2>Projects</h2>
             <div class="project">
                 <img src= "./images/project1.png" alt="Project 1">
-                <h3>Project 1</h3>
-                <p>The first project is related to develop a single Web page using
-                only two tools: HTML and CSS. The project consists in
-                creating a single web page with a menu at the top know as
-                Navigation Bar. I have included text describing myself and
-                text describing the project. Additionally, I have included
-                two images: one profile picture and second image is anything
-                related to the project itself.</p>
+                <h3>MoneyFlow Insight</h3>
+                <p>In a project that is part of my COM S 309 class, me and
+                    a couple of my friends are building a mobile app using Java 
+                    with Android Studio and Springboot. The app will provide users
+                    the feature to scan personal bank statments and view the cash
+                    inflow and outflow in their bank account.</p>
             </div>
         </div>
     </section>
